# app/Http/Resources/AuthResource.php
@@ -9,6 +9,8 @@ use Illuminate\Http\Request;
  * @OA\Schema(
  *     @OA\Property(property="result", type="array", @OA\Items(
  *         @OA\Property(property="accessToken", type="string"),
+ *         @OA\Property(property="refreshToken", type="string"),
+ *         @OA\Property(property="fingerprint", type="string"),
  *         @OA\Property(property="tokenType", type="string"),
  *         @OA\Property(property="expiresIn", type="integer")
  *     )),
@@ -27,9 +29,11 @@ class AuthResource extends Resource
     public function toArray($request)
     {
         return AppResponse::prepare([
-            'accessToken' => $this->resource,
+            'accessToken' => $this->resource['accessToken'],
+            'refreshToken' => $this->resource['refreshToken'],
+            'fingerprint' => $this->resource['fingerprint'],
             'tokenType' => 'Bearer',
-            'expiresIn' => time() + auth()->factory()->getTTL() * 60
+            'expiresIn' => $this->resource['expiresIn']
         ], $this->status);
     }
 }
