# app/Validation/Rules/Fingerprint.php
@@ -1,0 +1,19 @@
+<?php
+
+namespace App\Validation\Rules;
+
+use JetBrains\PhpStorm\ArrayShape;
+
+abstract class Fingerprint  extends Rule
+{
+    /**
+     * @return array
+     */
+    #[ArrayShape(['fingerprint' => "string[]"])]
+    public static function rules(): array
+    {
+        return [
+            'fingerprint' => ['required', 'string', 'uuid'],
+        ];
+    }
+}
